# vocalocator

./: .gitignore  LICENSE  Pipfile  README.md  end_to_end.sh  ensemble_end_to_end.sh  environment_conda.yml  pyproject.toml  requirements.txt  run_batch.sh  run_calib.sh  run_calib_no_slurm.sh  run_calib_single.sh  run_calibration.sh  run_eval.sh  run_finetuning.sh  run_gpu.sh  setup.py  temp_run.sh  test.sh  tune_std.sh  tune_std_single.sh
data/: compute_xcorrs.py  filtered_idx.npy  filtered_idx_notail.npy  remove_outliers_and_partition.py  reshape_dataset.py
gerbilizer/: __main__.py  assess.py  calibration.py  main.py  outputs.py  update_json.py  util.py
gerbilizer/architectures/: __init__.py  attentionnet.py  attn_func.py  base.py  densenet.py  encodings.py  ensemble.py  frequency_network.py  multihead_sparse.py  perceiver.py  reduced.py  rope.py  simplenet.py  simplenet_bn.py  simplenet_crosscorr.py  simplenet_log.py  sparse_attn.py  sparse_transformers.py  (+2 more)
notebooks/: 0001-visualize-predictions.ipynb  0002-visualize-data-outliers.ipynb
room_configs/: e1_1M.yaml  e1_mini.yaml  e2_1M.yaml  e2_mini.yaml  e3_1M.yaml  e3_mini.yaml
sample_configs/: cnn_config_environment_2.json5  multi_node_environment_1.json5  xcorr_config_environment_1.json5
tests/: constants.py  test_load_models.py
training/: augmentations.py  best_std_val.py  calibration.py  configs.py  dataloaders.py  eval.py  eval_calib.py  eval_smoothing.py  logger.py  main.py  models.py  sinkhorn.py  train.py  trainer.py
vocalocator/: __main__.py  assess.py  calibration.py  update_json.py  util.py
(+85 files in other folders)
